adding team_abr to team_batting_combined
